# internal/transport/http/handlers/poster.go
@@ -33,13 +33,14 @@ func (c *PosterController) AddImageHandler(w http.ResponseWriter, r *http.Reques
 // @Tags			Poster
 // @Accept			json
 // @Produce		json
+// @Security		BearerAuth
 // @Param			request	body		dto.EditPostRequest	true	"Edit post data"
 // @Param			postId	path		string				true	"Post ID"	format(uuid)
 // @Success		200		{object}	dto.EditPostResponse
 // @Failure		400		"Incorrect body\nRefresh token expired or incorrect"
 // @Failure		403		"Access denied"
 // @Failure		404		"Post not found"
-// @Router			/api/post/{postId} [put]“
+// @Router			/post/{postId} [put]“
 func (c *PosterController) EditPostHandler(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	user, ok := ctx.Value(types.CtxUser).(*dto.UserDB)
@@ -94,13 +95,14 @@ func (c *PosterController) DeleteImageHandler(w http.ResponseWriter, r *http.Req
 // @Tags			Poster
 // @Accept			json
 // @Produce		json
+// @Security		BearerAuth
 // @Param			request	body		dto.PublishPostRequest	true	"Publish post data"
 // @Param			postId	path		string					true	"Post ID"	format(uuid)
 // @Success		200		{object}	dto.EditPostResponse
 // @Failure		400		"Incorrect body\nRefresh token expired or incorrect"
 // @Failure		403		"Access denied"
 // @Failure		404		"Post not found"
-// @Router			/api/post/{postId}/status [patch]“
+// @Router			/post/{postId}/status [patch]“
 func (c *PosterController) PublishHandler(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	user, ok := ctx.Value(types.CtxUser).(*dto.UserDB)
